# xcode-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.opencode/: openmem.db  openmem.db-shm  openmem.db-wal
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-compile-and-help.txt  task-2-default-config.txt  task-2-env-override.txt
.sisyphus/notepads/xcode-v1/: decisions.md  issues.md  learnings.md
.sisyphus/plans/: xcode-v1.md
src/: config.rs  context.rs  lib.rs  main.rs  spinner.rs  tracking.rs  ui.rs
src/agent/: agents_md.rs  coder.rs  context_manager.rs  director.rs  mod.rs  orchestrator.rs
src/auth/: mod.rs
src/http/: mod.rs  routes.rs
src/io/: http.rs  mod.rs  terminal.rs
src/llm/: anthropic.rs  gemini.rs  mod.rs  openai.rs  registry.rs  retry.rs
src/lsp/: mod.rs  transport.rs
src/mcp/: bridge.rs  mod.rs  transport.rs  types.rs
src/orchestrator/: executor.rs  graph.rs  mod.rs
src/repl/: commands.rs  input.rs  mod.rs
src/sandbox/: mod.rs
src/session/: mod.rs  store.rs
src/tools/: bash.rs  code_search.rs  custom_tool.rs  display_image.rs  fetch.rs  file_edit.rs  file_read.rs  file_write.rs  git_blame.rs  git_commit.rs  git_diff.rs  git_log.rs  glob_search.rs  grep_search.rs  ls.rs  lsp_diagnostics.rs  lsp_goto_def.rs  lsp_references.rs  mcp_resource.rs  mod.rs  patch.rs  question.rs  spawn_task.rs
tests/: e2e_run.rs  helpers.rs  http_integration.rs  mock_llm_server.rs
