[package]
name = "xcodeai"
version = "2.0.0"
edition = "2021"
description = "Autonomous AI coding agent — zero human intervention, sbox sandboxed, OpenAI-compatible"
license = "MIT"
keywords = ["ai", "agent", "coding", "autonomous", "llm"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/xqli/xcode"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
globset = "0.4"
regex = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
walkdir = "2"
dirs = "5"
tempfile = "3"

futures-util = "0.3"
rand = "0.8"
rustyline = { version = "14", features = ["derive"] }
console = "0.15"
dialoguer = { version = "0.11", default-features = false, features = [] }
axum = { version = "0.7", features = ["tokio", "macros"] }
base64 = "0.21"
tower-http = { version = "0.5", features = ["cors"] }
termimad = "0.34"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
